--- a/styleCom.css
+++ b/styleCom.css
@@ -62,3 +62,11 @@
     left: 0;
     z-index: -1;
 }
+
+/* section header */
+.sectionHeader {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    gap: 15px;
+}
