--- a/style.css
+++ b/style.css
@@ -492,7 +492,7 @@ body {
 
 /* Gallery Styling end ******************* */
 
-/* CTA Styling start */
+/* CTA Styling start ******************* */
 .ctaSection {
     display: flex;
     align-items: center;
@@ -541,6 +541,57 @@ body {
     justify-content: center;
     gap: 10px;
 }
-/* CTA Styling end */
 
+/* CTA Styling end ************************** */
+
+/* Testimonial Styling start ************************** */
+.testimonialSection {
+    padding: 35px 0;
+}
+
+.tesBoxes {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 30px 0;
+    gap: 15px;
+}
+
+.tesBox {
+    display: flex;
+    align-content: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    flex: 1 1 250px;
+    gap: 30px;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+}
+
+.tesBoxes .tesBox i {
+    font-size: 3.5em;
+    color: var(--pri);
+}
+
+.tesBoxes .tesBox p {
+    color: #333;
+}
+
+.tesBoxes .tesBox .tesDetails {
+    padding: 0 0 10px;
+    border-left: 10px solid var(--pri);
+    padding-left: 15px;
+}
+
+.tesBoxes .tesBox .tesDetails h4 {
+    font-family: 1.3em;
+}
+
+.tesBoxes .tesBox .tesDetails p.tesYrs {
+    font-size: .85em;
+}
+
+/* Testimonial Styling end ************************** */
 /* Main Styling Start ****************************** */
