--- a/styleCom.css
+++ b/styleCom.css
@@ -1,78 +1,365 @@
-/* btns components */
-.btn {
-    padding: 8px 20px;
-    border-radius: 20px;
-    font-size: 1em;
-    text-decoration: none;
-    font-weight: bold;
-    transition: all .3s ease-in-out;
-    cursor: pointer;
+/* Media Query for devices with max-width of 1046px and below */
+@media (max-width: 1046px) {
+    .navbar .navButtons .btn.darkBtn {
+        display: none;
+    }
+
+    .heroSection .detailsHero {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .heroSection .detailsBtns {
+        justify-content: flex-start;
+    }
+
 }
 
-.lightBtn {
-    background-color: #fdf2e9;
-    color: #c1520f;
+/* Media Query for devices with max-width of 1024px and below */
+@media (max-width: 1024px) {
+    .galleryImages .imagesSection {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: auto;
+    }
+
+    .imagesSection .img1 {
+        grid-area: 1 / 1 / 2 / 3;
+    }
+
+    .imagesSection .img2 {
+        grid-area: 1 / 3 / 2 / 4;
+    }
+
+    .imagesSection .img3 {
+        grid-area: 2 / 1 / 3 / 2;
+    }
+
+    .imagesSection .img4 {
+        grid-area: 2 / 2 / 3 / 4;
+    }
+
+    .imagesSection .img5 {
+        grid-area: 3 / 1 / 4 / 2;
+    }
+
+    .imagesSection .img6 {
+        grid-area: 3 / 2 / 4 / 4;
+    }
+
+    .footer form .input {
+        max-width: 35%;
+    }
+
+    .footer .selectBox {
+        max-width: 30%;
+    }
 }
 
-.lightBtn:hover {
-    background-color: #fbe4d4;
+/* Media Query for devices with max-width of 1016px and below */
+@media screen and (max-width: 1016px) {
+    .aboutUsSection {
+        flex-direction: column-reverse;
+    }
+
+    .aboutUsSection .aboutImage {
+        width: 100%;
+        height: 40vh;
+    }
+
+    .aboutUsSection .aboutImage img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .aboutUsSection .aboutContent {
+        padding: 20px 0 0;
+    }
 }
 
-.darkBtn {
-    background-color: #c1520f;
-    color: #fff;
+/* Media Query for devices with max-width of 906px and below */
+@media screen and (max-width: 906px) {
+    body {
+        font-size: 93%;
+    }
+
+    .navbar .navButtons {
+        display: none;
+    }
+
+    .navbar .navbarLeft {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+    }
+
+    .heroSection .detailsHero h1,
+    .heroSection .detailsHero p {
+        max-width: 95%;
+    }
+
+    .footer h2 {
+        max-width: 85%;
+    }
 }
 
-.darkBtn:hover {
-    background-color: #a2400c;
+/* Media Query for devices with max-width of 768px and below */
+@media screen and (max-width: 768px) {
+    .main .counterSection .counterMain {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .main .counterSection .counterMain {
+        width: 99%;
+    }
+
+    .galleryImages .imagesSection {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto;
+    }
+
+    .imagesSection .img1 {
+        grid-area: 1 / 1 / 2 / 3;
+    }
+
+    .imagesSection .img2 {
+        grid-area: 2 / 1 / 3 / 2;
+    }
+
+    .imagesSection .img3 {
+        grid-area: 2 / 2 / 3 / 3;
+    }
+
+    .imagesSection .img4 {
+        grid-area: 3 / 1 / 4 / 2;
+    }
+
+    .imagesSection .img5 {
+        grid-area: 3 / 2 / 4 / 3;
+    }
+
+    .imagesSection .img6 {
+        grid-area: 4 / 1 / 5 / 3;
+    }
+
+    .ctaSection .ctaContent p {
+        max-width: 65%;
+    }
+
+    .footer h2 {
+        max-width: 95%;
+    }
+
+    .footer form {
+        flex-direction: column;
+    }
+
+    .footer form .input {
+        max-width: 90%;
+    }
+
+    .footer form .selectBox {
+        max-width: 90%;
+    }
+
+    .footer form .footBtn {
+        max-width: 90%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .footer .credits .socialIcons {
+        display: none;
+    }
+
 }
 
-.borderBtn {
-    background: transparent;
-    border: 1px solid var(--middark);
-    color: var(--middark);
+/* Media Query for devices with max-width of 700px and below */
+@media screen and (max-width: 700px) {
+    .highlightSection .slideImage {
+        height: 50vh;
+    }
 }
 
-.borderBtn:hover {
-    background-color: #fdf2e9;
-    color: #c1520f;
+/* Media Query for devices with max-width of 650px and below */
+@media screen and (max-width: 650px) {
+    body {
+        font-size: 95%;
+    }
+
+    .navbar {
+        padding: 10px 5%;
+        z-index: 9999;
+    }
+
+    .navbar .navLinks {
+        position: absolute;
+        top: 0;
+        right: 0;
+        max-width: 100%;
+        width: 100%;
+        height: 100vh;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 20px;
+        background: #fff;
+        gap: 0;
+        overflow-y: scroll;
+        transform: translateX(-200%);
+        transition: all .3s ease-in-out;
+    }
+
+    .navbar.active .navLinks {
+        transform: translateX(0);
+    }
+
+    .navbar .navLinks .resLogo {
+        display: block;
+    }
+
+    .navbar>.logo {
+        opacity: 1;
+        transition: .3s ease-in-out;
+    }
+
+    .navbar.active>.logo {
+        opacity: 0;
+    }
+
+    .navbar .navLinks>li {
+        width: 100%;
+        border-bottom: 1px solid #fbe4d48f;
+    }
+
+    .navbar .navLinks>li:last-child {
+        border: none;
+    }
+
+    .navbar .navLinks a {
+        padding: 10px 0;
+    }
+
+    .navbar .navLinks .dropdown a.dropBtn {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .navbar .navLinks .dropdown .dropdownMenu {
+        width: 100%;
+        position: relative;
+        top: 0;
+        border: none;
+        background: #fbe4d48f;
+    }
+
+    .navbar .navLinks .dropdown .dropdownMenu li {
+        padding: 0 20px;
+    }
+
+    .navbar .navLinks .resNavHeader {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0 0 25px;
+    }
+
+    .navbar .humberger {
+        display: flex;
+        z-index: 99999;
+    }
+
+    .heroSection figure #heroVideo {
+        height: 45vh;
+    }
+
+    .heroSection .detailsHero h1 {
+        font-size: 3em;
+    }
+
+    .heroSection .detailsHero p {
+        font-size: .98em;
+    }
 }
 
-/* title components */
-.headTitle {
-    position: relative;
+/* Media Query for devices with max-width of 600px and below */
+@media screen and (max-width: 600px) {
+    .ctaSection {
+        padding: 50px 20px;
+    }
+
+    .ctaSection .ctaContent h3 {
+        font-size: 2.3em;
+        max-width: 100%;
+    }
+
+    .ctaSection .ctaContent p {
+        max-width: 95%;
+    }
+
+    .footer {
+        padding: 40px 20px 0;
+    }
 }
 
-.headTitle h3 {
-    font-size: 2.4em;
-    max-width: 75%;
-    line-height: 95%;
-    z-index: 1;
+/* Media Query for devices with max-width of 480px and below */
+@media screen and (max-width: 480px) {
+    .galleryImages .imagesSection {
+        grid-template-columns: repeat(2fr, 1fr);
+        grid-template-rows: auto;
+        gap: 5px;
+    }
+
+    .imagesSection .imgGal {
+        max-height: 300px;
+    }
+
+    .imagesSection .img1,
+    .imagesSection .img2,
+    .imagesSection .img3,
+    .imagesSection .img4,
+    .imagesSection .img5,
+    .imagesSection .img6 {
+        grid-area: auto;
+    }
+
+    .highlightSection .slideImage {
+        height: 38vh;
+    }
 }
 
-.headTitle h3 span {
-    color: var(--pri);
+/* Media Query for devices with max-width of 460px and below */
+@media screen and (max-width: 460px) {
+    .footer form .input,
+    .footer form .selectBox,
+    .footer form .footBtn {
+        max-width: 100%;
+    }
 }
 
-.headTitle .liTitle {
-    font-size: 2.7em;
-    font-weight: 800;
-    color: #c1530f2f;
-    position: absolute;
-    top: -27px;
-    left: 0;
-    z-index: -1;
-}
+/* Media Query for devices with max-width of 424px and below */
+@media screen and (max-width: 424px) {
+    body {
+        font-size: 90%;
+    }
 
-/* section header */
-.sectionHeader {
-    display: flex;
-    align-items: flex-end;
-    justify-content: space-between;
-    gap: 15px;
-}
+    p {
+        font-size: 1.2em;
+    }
 
-.highText {
-    color: var(--pri);
-    font-weight: 600;
+    .heroSection figure #heroVideo {
+        height: 37vh;
+    }
+
+    .heroSection .detailsHero h1 {
+        font-size: 2.4em;
+    }
+
+    .heroSection .detailsHero h1,
+    .heroSection .detailsHero p {
+        max-width: 100%;
+    }
 }
